# cpp-voxel-raytracer

./: .gitignore  CMakeLists.txt  flake.nix
assets/shaders/: dda.glsl  quad.frag  quad.vert  random.glsl  sky.glsl  voxel.comp
src/: CMakeLists.txt  main.cpp
src/rendering/: AccelerationStructure.cpp  AccelerationStructure.h  Camera.cpp  Camera.h  Model.cpp  Model.h  Noise.cpp  Noise.h  Shader.cpp  Shader.h  VoxelBuffer.cpp  VoxelBuffer.h
src/shaders/: box.glsl  dda.glsl  old.frag  old.vert  quad.frag  random.glsl  simple.frag  simple.vert  tracing.frag  tracing.vert  voxel.comp
